[package]
name = "pythia-sql"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = { version = "0.8.0", features = ["serde"] }
serde = "1.0.124"
serde_json = { version = "1.0"}
json = "0.12"